kubernetes/dev/service.yaml
apiVersion: v1 # for versions before 1.9.0 use apps/v1beta2
kind: Service
metadata:
  name: cr-formular-new-dev
spec:
  ports:
    - name: cr-formular-new-port-dev
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cr-formular-new-dev
  type: ClusterIP
